test/failing/badintfield8.trunnel

struct x {

   u8 b;
   union u[a] WITH LENGTH b {
     1 : u8 x;
     2 : u16 y;
   };
   u8 a;
}

